create challenges - index view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,7 @@
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
+@import 'block-grid-foundation';
+@import 'modules/nav';
+@import 'modules/footer';
+@import 'modules/spacing';
+@import 'views/challenges/index';
