--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,2 +1,99 @@
-<h1>Challenges#index</h1>
-<p>Find me in app/views/challenges/index.html.erb</p>
+<section class="challenges-index">
+  <div class="m-b-3">
+    <div class="container">
+      <div class="row">
+        <h1>My challenges</h1>
+      </div>
+    </div>
+  </div>
+  <div class="container m-t-0">
+    <div class="block-grid-lg-4 block-grid-md-3 block-grid-sm-2 block-grid-xs-1">
+      <div class="block-grid-item">
+        <div class="card">
+          <h4 class="card-title">Special title treatment</h4>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <span class="pull-right right-list-content">2352-AG23</span>
+              ID
+            </li>
+            <li class="list-group-item">
+              <span class="badge">14</span>
+              Submits recieved
+            </li>
+            <li class="list-group-item">
+              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
+              <a href="">Edit</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="block-grid-item">
+        <div class="card">
+          <h4 class="card-title">Special title treatment</h4>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <span class="pull-right right-list-content">2352-AG23</span>
+              ID
+            </li>
+            <li class="list-group-item">
+              <span class="badge">14</span>
+              Submits recieved
+            </li>
+            <li class="list-group-item">
+              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
+              <a href="">Edit</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="block-grid-item">
+        <div class="card">
+          <h4 class="card-title">Special title treatment</h4>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <span class="pull-right right-list-content">2352-AG23</span>
+              ID
+            </li>
+            <li class="list-group-item">
+              <span class="badge">14</span>
+              Submits recieved
+            </li>
+            <li class="list-group-item">
+              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
+              <a href="">Edit</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="block-grid-item">
+        <div class="card">
+          <h4 class="card-title">Special title treatment</h4>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <span class="pull-right right-list-content">2352-AG23</span>
+              ID
+            </li>
+            <li class="list-group-item">
+              <span class="badge">14</span>
+              Submits recieved
+            </li>
+            <li class="list-group-item">
+              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
+              <a href="">Edit</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="btn-group">
+      <button class="btn btn-default btn-lg pull-right" type="button">
+         Create challenge
+       </button>
+
+     </div>
+   </div>
+ </div>
+</section>
