--- a/app/assets/stylesheets/_bootstrap-custom.scss
+++ b/app/assets/stylesheets/_bootstrap-custom.scss
@@ -5,7 +5,7 @@
  */
 
 // Core variables and mixins
-@import "bootstrap/variables";
+@import "variables-bootstrap-custom";
 @import "bootstrap/mixins";
 
 // Reset and dependencies
