--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
-<%= yield %>
-
+  <%= render 'layouts/nav' %>
+  <%= yield %>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
