--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,15 @@
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
 @import 'block-grid-foundation';
+@import 'modules/block-grid-items';
 @import 'modules/nav';
 @import 'modules/footer';
 @import 'modules/spacing';
+@import 'modules/prism';
+@import 'modules/alerts';
+@import 'modules/modal';
+@import 'modules/prism';
 @import 'views/challenges/index';
+@import 'views/challenges/show';
+
+
