--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -10,7 +10,7 @@
     <div class="block-grid-lg-4 block-grid-md-3 block-grid-sm-2 block-grid-xs-1">
       <div class="block-grid-item">
         <div class="card">
-          <h4 class="card-title">Special title treatment</h4>
+          <h4 class="card-title">Add numbers</h4>
           <ul class="list-group">
             <li class="list-group-item">
               <span class="pull-right right-list-content">2352-AG23</span>
@@ -22,7 +22,45 @@
             </li>
             <li class="list-group-item">
               <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">Edit</a>
+              <a href="">view</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="block-grid-item">
+        <div class="card">
+          <h4 class="card-title">Multiply</h4>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <span class="pull-right right-list-content">2352-AG23</span>
+              ID
+            </li>
+            <li class="list-group-item">
+              <span class="badge">14</span>
+              Submits recieved
+            </li>
+            <li class="list-group-item">
+              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
+              <a href="">view</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="block-grid-item">
+        <div class="card">
+          <h4 class="card-title">Devide</h4>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <span class="pull-right right-list-content">2352-AG23</span>
+              ID
+            </li>
+            <li class="list-group-item">
+              <span class="badge">14</span>
+              Submits recieved
+            </li>
+            <li class="list-group-item">
+              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
+              <a href="">view</a>
             </li>
           </ul>
         </div>
@@ -41,45 +79,7 @@
             </li>
             <li class="list-group-item">
               <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">Edit</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="block-grid-item">
-        <div class="card">
-          <h4 class="card-title">Special title treatment</h4>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <span class="pull-right right-list-content">2352-AG23</span>
-              ID
-            </li>
-            <li class="list-group-item">
-              <span class="badge">14</span>
-              Submits recieved
-            </li>
-            <li class="list-group-item">
-              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">Edit</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="block-grid-item">
-        <div class="card">
-          <h4 class="card-title">Special title treatment</h4>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <span class="pull-right right-list-content">2352-AG23</span>
-              ID
-            </li>
-            <li class="list-group-item">
-              <span class="badge">14</span>
-              Submits recieved
-            </li>
-            <li class="list-group-item">
-              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">Edit</a>
+              <a href="">view</a>
             </li>
           </ul>
         </div>
