--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,2 +1,206 @@
-<h1>Challenges#show</h1>
-<p>Find me in app/views/challenges/show.html.erb</p>
+<section class="challenges-show">
+
+  <div class="m-b-3">
+    <div class="container">
+      <div class="row">
+        <ol class="breadcrumb">
+          <li><a href="#">My challenges</a></li>
+          <li class="active">Add numbers</li>
+        </ol>
+      </div>
+      <div class="row">
+        <h2>Add numbers <a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></h2>
+        <p><strong>Challenge ID</strong> 2352-AG23</p>
+      </div>
+    </div>
+  </div>
+  <div class="container m-t-0">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">Info</div>
+
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Input</th>
+                  <th>Expected ouput</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>1 3</td>
+                  <td>4</td>
+                  <td><a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>7 2</td>
+                  <td>14</td>
+                  <td><a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>55 4</td>
+                  <td>220</td>
+                  <td><a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></td>
+                </tr>
+              </tbody>
+            </table>
+
+        </div>
+        <button class="btn btn-default" type="button">
+          Add I/O
+        </button>
+      </div>
+
+      <div class="col-lg-8">
+        <div class="panel panel-default">
+          <div class="panel-heading">Recieved solutions</div>
+
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Submitter ID</th>
+                  <th>Answer count</th>
+                  <th>View</th>
+                  <th>Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td class="submitter-id">3463-ADAG1</td>
+                  <td class="answer-count">14/22</td>
+                  <td><a href="" data-toggle="modal" data-target="#myModal">view</a></td>
+                  <td><span class="label label-success">passed</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td class="submitter-id">3463-ADAG1</td>
+                  <td class="answer-count">14/22</td>
+                  <td><a href="">view</a></td>
+                  <td><span class="label label-default">Pending</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td class="submitter-id">3463-ADAG1</td>
+                  <td class="answer-count">14/22</td>
+                  <td><a href="">view</a></td>
+                  <td><span class="label label-info">Evaluating</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td class="submitter-id">3463-ADAG1</td>
+                  <td class="answer-count">14/22</td>
+                  <td><a href="">view</a></td>
+                  <td><span class="label label-danger">wrong</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">4</th>
+                  <td class="submitter-id">3463-ADAG1</td>
+                  <td class="answer-count">14/22</td>
+                  <td><a href="">view</a></td>
+                  <td><span class="label label-danger">error</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">5</th>
+                  <td class="submitter-id">3463-ADAG1</td>
+                  <td class="answer-count">14/22</td>
+                  <td><a href="">view</a></td>
+                  <td><span class="label label-danger">timeout</span></td>
+                </tr>
+                <tr>
+                </tbody>
+              </table>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <hr>
+        <div class="btn-group pull-right">
+          <button class="btn btn-default btn-lg" type="button">
+           Run quick test
+         </button>
+       </div>
+     </div>
+   </div>
+
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="vertical-alignment-helper">
+    <div class="modal-dialog vertical-align-center">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Solution by ID 3463-ADAG1</h4>
+        </div>
+        <div class="modal-body">
+          <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#code">code</a></li>
+            <li><a data-toggle="tab" href="#input">Input</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <div id="code" class="tab-pane fade in active">
+              <h4>JS:</h4>
+              <pre><code class="language-javascript">
+  var myObject = {
+    property1: "something",
+    property2: 5,
+    property3: true
+  };
+            </code></pre>
+          </div>
+          <div id="input" class="tab-pane fade">
+
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Input</th>
+                  <th>Expected output</th>
+                  <th>Actual output</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>1 3</td>
+                  <td>4</td>
+                  <td class="actual-output"><span>34</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>7 2</td>
+                  <td>14</td>
+                  <td class="actual-output"><span>34</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>55 4</td>
+                  <td>220</td>
+                  <td class="actual-output"><span>34</span></td>
+                </tr>
+              </tbody>
+            </table>
+
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</section>
