--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -2,18 +2,20 @@
   <div class="m-b-3">
     <div class="container">
       <div class="row">
-        <h1>My challenges</h1>
+        <h1>My challenges <span class="badge"><%= @challenges.count %></span></h1>
       </div>
     </div>
   </div>
   <div class="container m-t-0">
     <div class="block-grid-lg-4 block-grid-md-3 block-grid-sm-2 block-grid-xs-1">
+      <% @challenges.each do |challenge| %>
+
       <div class="block-grid-item">
         <div class="card">
-          <h4 class="card-title">Add numbers</h4>
+          <h4 class="card-title"><%= challenge.name %></h4>
           <ul class="list-group">
             <li class="list-group-item">
-              <span class="pull-right right-list-content">2352-AG23</span>
+              <span class="pull-right right-list-content"><%= challenge.uid %></span>
               ID
             </li>
             <li class="list-group-item">
@@ -22,77 +24,24 @@
             </li>
             <li class="list-group-item">
               <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">view</a>
+              <%= link_to 'view', challenge_path(challenge) %>
             </li>
           </ul>
         </div>
       </div>
-      <div class="block-grid-item">
-        <div class="card">
-          <h4 class="card-title">Multiply</h4>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <span class="pull-right right-list-content">2352-AG23</span>
-              ID
-            </li>
-            <li class="list-group-item">
-              <span class="badge">14</span>
-              Submits recieved
-            </li>
-            <li class="list-group-item">
-              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">view</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="block-grid-item">
-        <div class="card">
-          <h4 class="card-title">Devide</h4>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <span class="pull-right right-list-content">2352-AG23</span>
-              ID
-            </li>
-            <li class="list-group-item">
-              <span class="badge">14</span>
-              Submits recieved
-            </li>
-            <li class="list-group-item">
-              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">view</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="block-grid-item">
-        <div class="card">
-          <h4 class="card-title">Special title treatment</h4>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <span class="pull-right right-list-content">2352-AG23</span>
-              ID
-            </li>
-            <li class="list-group-item">
-              <span class="badge">14</span>
-              Submits recieved
-            </li>
-            <li class="list-group-item">
-              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
-              <a href="">view</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <% end %>
     </div>
+    <% if @challenges.empty? %>
+    <div class="row">
+      <p>Seems like you don't have any challenges yet.</p>
+    </div>
+    <% end %>
   </div>
   <div class="container">
     <div class="row">
+    <hr>
       <div class="btn-group">
-      <button class="btn btn-default btn-lg pull-right" type="button">
-         Create challenge
-       </button>
-
+       <%= link_to 'Create challenge', new_challenge_path, class: "btn btn-default btn-lg pull-right" %>
      </div>
    </div>
  </div>
