--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,2 +1,109 @@
-<h1>Challenges#new</h1>
-<p>Find me in app/views/challenges/new.html.erb</p>
+<section class="challenges-show">
+
+  <div class="m-b-3">
+    <div class="container">
+      <div class="row">
+        <ol class="breadcrumb">
+          <li><%= link_to 'My challenges' ,challenges_path %></li>
+          <li class="active">new challenge</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+  <div class="container m-t-0">
+    <div class="row">
+      <div class="col-lg-4">
+      <h2>Create a new challenge</h2>
+      <hr>
+        <%= form_for @challenge, html: {class: "nifty_form"} do |f| %>
+        <div class="form-group">
+            <%= label_tag(:name, "Name") %>
+            <%= f.text_field :name, class: "form-control" ,placeholder: "Name of the challenge" %>
+        </div>
+        <%= f.submit "Create", class: 'btn btn-default' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <hr>
+      <div class="btn-group pull-right">
+        <button class="btn btn-default btn-lg" type="button">
+         Run quick test
+       </button>
+     </div>
+   </div>
+ </div>
+
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="vertical-alignment-helper">
+    <div class="modal-dialog vertical-align-center">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Solution by ID 3463-ADAG1</h4>
+        </div>
+        <div class="modal-body">
+          <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#code">code</a></li>
+            <li><a data-toggle="tab" href="#input">Input</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <div id="code" class="tab-pane fade in active">
+              <h4>JS:</h4>
+              <pre><code class="language-javascript">
+                var myObject = {
+                property1: "something",
+                property2: 5,
+                property3: true
+              };
+            </code></pre>
+          </div>
+          <div id="input" class="tab-pane fade">
+
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Input</th>
+                  <th>Expected output</th>
+                  <th>Actual output</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>1 3</td>
+                  <td>4</td>
+                  <td class="actual-output"><span>34</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>7 2</td>
+                  <td>14</td>
+                  <td class="actual-output"><span>34</span></td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>55 4</td>
+                  <td>220</td>
+                  <td class="actual-output"><span>34</span></td>
+                </tr>
+              </tbody>
+            </table>
+
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</section>
