add nested form to new challenge

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
 @import 'modules/alerts';
 @import 'modules/modal';
 @import 'modules/prism';
+@import 'modules/nested_forms';
 @import 'views/challenges/index';
 @import 'views/challenges/show';
-
-
+@import 'views/challenges/new';
