--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -23,7 +23,10 @@
               Submits recieved
             </li>
             <li class="list-group-item">
-              <span class="pull-right right-list-content"><a href=""><i class="glyphicon glyphicon-remove-circle  "></i></a></span>
+              <span class="pull-right right-list-content">
+
+                <%= link_to '<i class="glyphicon glyphicon-remove-circle  "></i>'.html_safe , challenge_path(challenge.id), method: :delete , data: { confirm: "are you sure?"} %>
+              </span>
               <%= link_to 'view', challenge_path(challenge) %>
             </li>
           </ul>
