--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -30,24 +30,14 @@
                 </tr>
               </thead>
               <tbody>
-                <!-- <tr>
+              <% @challenge.test_cases.each do |test_case| %>
+                <tr>
                   <th scope="row">1</th>
-                  <td>1 3</td>
-                  <td>4</td>
+                  <td><%= test_case.input %></td>
+                  <td><%= test_case.output %></td>
                   <td><a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></td>
                 </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>7 2</td>
-                  <td>14</td>
-                  <td><a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>55 4</td>
-                  <td>220</td>
-                  <td><a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></td>
-                </tr> -->
+                <% end %>
               </tbody>
             </table>
 
@@ -71,6 +61,15 @@
                 </tr>
               </thead>
               <tbody>
+              <% @challenge.submits.each do | submit| %>
+              <tr>
+                  <th scope="row">1</th>
+                  <td class="submitter-id">3463-ADAG1</td>
+                  <td class="answer-count">14/22</td>
+                  <td><a href="" data-toggle="modal" data-target="#myModal">view</a></td>
+                  <td><span class="label label-success">passed</span></td>
+                </tr>
+              <% end %>
                <!--  <tr>
                   <th scope="row">1</th>
                   <td class="submitter-id">3463-ADAG1</td>
