--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,3 +14,6 @@
   <%= render 'layouts/footer' %>
 </body>
 </html>
+<script>
+  $('.alert').fadeIn('slow').delay( 4500 ).fadeOut( 1000 );
+</script>
