--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -9,7 +9,9 @@
         </ol>
       </div>
       <div class="row">
-        <h2><%= @challenge.name %> <a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></h2>
+        <h2><%= @challenge.name %>
+          <%= link_to '<i class="glyphicon glyphicon-remove-circle  "></i>'.html_safe , challenge_path(@challenge), method: :delete , data: { confirm: "are you sure?"} %>
+        </h2>
         <p><strong>Challenge ID</strong> <%= @challenge.uid %></p>
       </div>
     </div>
@@ -20,26 +22,28 @@
         <div class="panel panel-default">
           <div class="panel-heading">Info</div>
 
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Input</th>
-                  <th>Expected ouput</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Input</th>
+                <th>Expected ouput</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
               <% @challenge.test_cases.each do |test_case| %>
-                <tr>
-                  <th scope="row">1</th>
-                  <td><%= test_case.input %></td>
-                  <td><%= test_case.output %></td>
-                  <td><a href=""><i class="glyphicon glyphicon-remove-circle"></i></a></td>
-                </tr>
-                <% end %>
-              </tbody>
-            </table>
+              <tr>
+                <th scope="row">1</th>
+                <td><%= test_case.input %></td>
+                <td><%= test_case.output %></td>
+                <td>
+                  <%= link_to '<i class="glyphicon glyphicon-remove-circle  "></i>'.html_safe , test_case_path(@challenge), method: :delete , data: { confirm: "are you sure?"} %>
+                </td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
 
         </div>
         <button class="btn btn-default" type="button">
@@ -50,25 +54,25 @@
       <div class="col-lg-8">
         <div class="panel panel-default">
           <div class="panel-heading">Recieved solutions</div>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Submitter ID</th>
-                  <th>Answer count</th>
-                  <th>View</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Submitter ID</th>
+                <th>Answer count</th>
+                <th>View</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody>
               <% @challenge.submits.each do | submit| %>
               <tr>
-                  <th scope="row">1</th>
-                  <td class="submitter-id">3463-ADAG1</td>
-                  <td class="answer-count">14/22</td>
-                  <td><a href="" data-toggle="modal" data-target="#myModal">view</a></td>
-                  <td><span class="label label-success">passed</span></td>
-                </tr>
+                <th scope="row">1</th>
+                <td class="submitter-id">3463-ADAG1</td>
+                <td class="answer-count">14/22</td>
+                <td><a href="" data-toggle="modal" data-target="#myModal">view</a></td>
+                <td><span class="label label-success">passed</span></td>
+              </tr>
               <% end %>
                <!--  <tr>
                   <th scope="row">1</th>
@@ -116,89 +120,89 @@
                 </tbody>
               </table>
 
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <hr>
-        <div class="btn-group pull-right">
-          <button class="btn btn-default btn-lg" type="button">
-           Run quick test
-         </button>
+      <div class="container">
+        <div class="row">
+          <hr>
+          <div class="btn-group pull-right">
+            <button class="btn btn-default btn-lg" type="button">
+             Run quick test
+           </button>
+         </div>
        </div>
      </div>
-   </div>
 
- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="vertical-alignment-helper">
-    <div class="modal-dialog vertical-align-center">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="vertical-alignment-helper">
+        <div class="modal-dialog vertical-align-center">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
 
-          </button>
-          <h4 class="modal-title" id="myModalLabel">Solution by ID 3463-ADAG1</h4>
-        </div>
-        <div class="modal-body">
-          <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#code">code</a></li>
-            <li><a data-toggle="tab" href="#input">Input</a></li>
-          </ul>
+              </button>
+              <h4 class="modal-title" id="myModalLabel">Solution by ID 3463-ADAG1</h4>
+            </div>
+            <div class="modal-body">
+              <ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#code">code</a></li>
+                <li><a data-toggle="tab" href="#input">Input</a></li>
+              </ul>
 
-          <div class="tab-content">
-            <div id="code" class="tab-pane fade in active">
-              <h4>JS:</h4>
-              <pre><code class="language-javascript">
-  var myObject = {
-    property1: "something",
-    property2: 5,
-    property3: true
-  };
-            </code></pre>
+              <div class="tab-content">
+                <div id="code" class="tab-pane fade in active">
+                  <h4>JS:</h4>
+                  <pre><code class="language-javascript">
+                    var myObject = {
+                    property1: "something",
+                    property2: 5,
+                    property3: true
+                  };
+                </code></pre>
+              </div>
+              <div id="input" class="tab-pane fade">
+
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Input</th>
+                      <th>Expected output</th>
+                      <th>Actual output</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>1 3</td>
+                      <td>4</td>
+                      <td class="actual-output"><span>34</span></td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>7 2</td>
+                      <td>14</td>
+                      <td class="actual-output"><span>34</span></td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>55 4</td>
+                      <td>220</td>
+                      <td class="actual-output"><span>34</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+
+              </div>
+            </div>
           </div>
-          <div id="input" class="tab-pane fade">
-
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Input</th>
-                  <th>Expected output</th>
-                  <th>Actual output</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>1 3</td>
-                  <td>4</td>
-                  <td class="actual-output"><span>34</span></td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>7 2</td>
-                  <td>14</td>
-                  <td class="actual-output"><span>34</span></td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>55 4</td>
-                  <td>220</td>
-                  <td class="actual-output"><span>34</span></td>
-                </tr>
-              </tbody>
-            </table>
-
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-</div>
-</div>
 </section>
