--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -43,6 +43,9 @@
                 <div class="bottom text-center">
                   New here ? <a href="#"><b>Join Us</b></a>
                 </div>
+                <div class="bottom text-center">
+                  <%= link_to 'logout', destroy_user_session_path, method: :delete %>
+                </div>
               </div>
             </li>
           </ul>
