--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,10 +15,17 @@
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><p class="navbar-text">Already have an account?</p></li> -->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>
+          <% if current_user %>
+            <%= current_user.email %>
+            <% else %>
+            Login
+          <% end %>
+          </b> <span class="caret"></span></a>
           <ul id="login-dp" class="dropdown-menu">
             <li>
               <div class="row">
+              <% if !current_user %>
                 <div class="col-md-12">
                   <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
                     <div class="form-group">
@@ -28,7 +35,7 @@
                     <div class="form-group">
                       <label class="sr-only" for="exampleInputPassword2">Password</label>
                       <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-                      <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                      <div class="help-block text-right"><%= link_to 'Forget your password?', new_user_password_path %></div>
                     </div>
                     <div class="form-group">
                       <button type="submit" class="btn btn-primary btn-block">Sign in</button>
@@ -43,9 +50,12 @@
                 <div class="bottom text-center">
                   New here ? <a href="#"><b>Join Us</b></a>
                 </div>
-                <div class="bottom text-center">
-                  <%= link_to 'logout', destroy_user_session_path, method: :delete %>
+                 <% end %>
+                <% if current_user %>
+                  <div class="bottom text-center">
+                    <%= link_to 'logout', destroy_user_session_path, method: :delete %>
                 </div>
+                <% end %>
               </div>
             </li>
           </ul>
