--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -128,9 +128,11 @@
         <div class="row">
           <hr>
           <div class="btn-group pull-right">
+          <%= link_to new_challenge_submit_path(@challenge) do %>
             <button class="btn btn-default btn-lg" type="button">
              Run quick test
            </button>
+          <% end %>
          </div>
        </div>
      </div>
