Add form submit

--- a/app/views/submits/new.html.erb
+++ b/app/views/submits/new.html.erb
@@ -61,9 +61,7 @@
         <div class="row">
           <hr>
           <div class="btn-group pull-right">
-            <button class="btn btn-default btn-lg" type="submit">
-             Run quick test
-           </button>
+          <%= f.submit 'Run Test', class:"btn btn-default btn-lg" %>
          </div>
          <% end %>
        </div>
