--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><%= image_tag 'logo-white?v=0.8' %></a>
+      <a class="navbar-brand" href="#"><%= image_tag 'https://raw.githubusercontent.com/alejoescobar/codejudge.io-api/development/app/assets/images/logo-white.png' %></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
