--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -67,9 +67,11 @@
         <div class="row">
           <hr>
           <div class="btn-group pull-right">
+          <%= link_to challenge_path(@challenge) do %>
             <button class="btn btn-default btn-lg" type="submit">
-             Run quick test
+             Back to Challenge
            </button>
+          <% end %>
          </div>
        </div>
      </div>
