improve devise views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,15 +1,18 @@
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import 'block-grid-foundation';
 @import 'modules/block-grid-items';
 @import 'modules/nav';
 @import 'modules/footer';
-@import 'modules/spacing';
 @import 'modules/prism';
 @import 'modules/alerts';
 @import 'modules/modal';
 @import 'modules/prism';
 @import 'modules/nested_forms';
+@import 'modules/spacing';
+@import 'modules/forms';
 @import 'views/challenges/index';
 @import 'views/challenges/show';
-@import 'views/challenges/new';
+@import 'views/welcome/index';
