--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -1,6 +1,10 @@
 // _nav.scss
 .navbar-main{
 	margin: 25px;
+	background: rgba(30,30,30,0.9);
+	.btn-signin{
+		margin-bottom: 20px;
+	}
 }
 .navbar-brand{
 	img{
@@ -12,14 +16,16 @@
 	min-width: 250px;
 	padding: 14px 14px 0;
 	overflow:hidden;
-	background-color:rgba(255,255,255,.8);
+	background-color:rgba(255,255,255,.98);
+	color:#333;
 }
 #login-dp {
 	.help-block{
 		font-size:12px
 	}
 	.bottom{
-		background-color:rgba(255,255,255,.8);
+		background: rgba(255,255,255,.98);
+		color:#333;
 		border-top:1px solid #ddd;
 		clear:both;
 		padding:14px;
