--- a/app/assets/stylesheets/modules/_spacing.scss
+++ b/app/assets/stylesheets/modules/_spacing.scss
@@ -1,6 +1,8 @@
 @import "../variables-bootstrap-custom";
-
-section{ padding-bottom: 30px }
+body{
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.section{position:absolute;margin-top: 1200px; background: green; padding-bottom: 30px; }
 .m-t-0 { margin-top: 0 !important }
 .m-b-3 { margin-bottom: 3rem !important; padding-bottom: 10px;}
 @media screen and (max-width: $screen-sm) {
@@ -9,6 +11,11 @@ section{ padding-bottom: 30px }
   }
 }
 
-.form-control{
-  margin-bottom: 5px;
+.form-control{ margin-bottom: 5px }
+
+.dropdown-menu{ z-index: 1000 }
+
+// .content { padding-top: 8em }
+.clear-nav{
+  margin-top: 8em;
 }
