link image to github url

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="home">
 <div class="hero-unit">
   <div class="container text-center">
-    <%= image_tag 'logo-white-welcome', class: 'logo' %>
+    <%= image_tag 'https://raw.githubusercontent.com/alejoescobar/codejudge.io-api/development/app/assets/images/logo-white-welcome.png', class: 'logo' %>
     <h1>the simples way to test your code</h1>
     <p><%= link_to 'I want to test my CODE!',  new_user_registration_path, class: 'btn' %></p>
   </div>
